# kennen

./: .gitignore  LICENSE  README.md
c/: CMakeLists.txt  Makefile
c/apue/chapter10/: catch_sigusr.c
c/apue/lib/: CMakeLists.txt  apue.h
c/docker/: .env  Makefile  docker-compose.yml
c/other/: get_timestamp.c  use_fork.c
c/unp/chapter01/: echo_time_tcp_srv.c  get_time_tcp_cli.c
c/unp/chapter04/: echo_time_fork_tcp_srv.c  use_connect.c
c/unp/chapter05/: tcp_cli_01.c  tcp_cli_02.c  tcp_cli_03.c  tcp_srv_01.c  tcp_srv_02.c  tcp_srv_03.c  tcp_srv_04.c
c/unp/lib/: CMakeLists.txt  constant.h  unp.h  wrap_read_write.c  wrap_signal.c  wrap_socket.c
javar/jdk8-analysis/src/java/lang/: CharacterData00.java  CharacterData01.java  CharacterData02.java  CharacterData0E.java  CharacterDataLatin1.java
javar/jdk8-analysis/src/java/util/: ArrayList.java
javar/jdk8-analysis/src/org/omg/CORBA/: ParameterMode.java  ParameterModeHelper.java  ParameterModeHolder.java  PolicyErrorCodeHelper.java  PolicyErrorHelper.java  PolicyErrorHolder.java  StringSeqHelper.java  StringSeqHolder.java  WStringSeqHelper.java  WStringSeqHolder.java
javar/jdk8-analysis/src/org/omg/CosNaming/: Binding.java  BindingHelper.java  BindingHolder.java  BindingIterator.java  BindingIteratorHelper.java  BindingIteratorHolder.java  BindingIteratorOperations.java  BindingIteratorPOA.java  BindingListHelper.java  BindingListHolder.java  BindingType.java  BindingTypeHelper.java  BindingTypeHolder.java  IstringHelper.java  NameComponent.java  NameComponentHelper.java  NameComponentHolder.java  NameHelper.java  NameHolder.java  NamingContext.java  NamingContextExt.java  NamingContextExtHelper.java  NamingContextExtHolder.java  NamingContextExtOperations.java  NamingContextExtPOA.java  NamingContextHelper.java  NamingContextHolder.java  NamingContextOperations.java  NamingContextPOA.java  _BindingIteratorStub.java  _NamingContextExtStub.java  _NamingContextStub.java
javar/jdk8-analysis/src/org/omg/Dynamic/: Parameter.java
javar/jdk8-analysis/src/org/omg/DynamicAny/: AnySeqHelper.java  DynAny.java  DynAnyFactory.java  DynAnyFactoryHelper.java  DynAnyFactoryOperations.java  DynAnyHelper.java  DynAnyOperations.java  DynAnySeqHelper.java  DynArray.java  DynArrayHelper.java  DynArrayOperations.java  DynEnum.java  DynEnumHelper.java  DynEnumOperations.java  DynFixed.java  DynFixedHelper.java  DynFixedOperations.java  DynSequence.java  DynSequenceHelper.java  DynSequenceOperations.java  DynStruct.java  DynStructHelper.java  DynStructOperations.java  DynUnion.java  DynUnionHelper.java  DynUnionOperations.java  DynValue.java  DynValueBox.java  DynValueBoxOperations.java  DynValueCommon.java  DynValueCommonOperations.java  DynValueHelper.java  DynValueOperations.java  FieldNameHelper.java  NameDynAnyPair.java  NameDynAnyPairHelper.java  NameDynAnyPairSeqHelper.java  NameValuePair.java  NameValuePairHelper.java  NameValuePairSeqHelper.java  (+9 more)
javar/jdk8-analysis/src/org/omg/IOP/: CodeSets.java  Codec.java  CodecFactory.java  CodecFactoryHelper.java  CodecFactoryOperations.java  CodecOperations.java  ComponentIdHelper.java  ENCODING_CDR_ENCAPS.java  Encoding.java  ExceptionDetailMessage.java  IOR.java  IORHelper.java  IORHolder.java  MultipleComponentProfileHelper.java  MultipleComponentProfileHolder.java  ProfileIdHelper.java  RMICustomMaxStreamFormat.java  ServiceContext.java  ServiceContextHelper.java  ServiceContextHolder.java  ServiceContextListHelper.java  ServiceContextListHolder.java  ServiceIdHelper.java  TAG_ALTERNATE_IIOP_ADDRESS.java  TAG_CODE_SETS.java  TAG_INTERNET_IOP.java  TAG_JAVA_CODEBASE.java  TAG_MULTIPLE_COMPONENTS.java  TAG_ORB_TYPE.java  TAG_POLICIES.java  TAG_RMI_CUSTOM_MAX_STREAM_FORMAT.java  TaggedComponent.java  TaggedComponentHelper.java  (+5 more)
javar/jdk8-analysis/src/sun/dc/: DuctusRenderingEngine.java
javar/jdk8-analysis/src/sun/misc/: Version.java
javar/jdk8-analysis/src/vitah/: ArrayListTest.java  GenerateVmOption.java  HelloWorld.java
javar/openjdk8-analysis/src/vitah/: GenerateVmOption.java  HelloWorld.java
my_c/: CMakeLists.txt  timestamp.c
my_c/other/: get_timestamp.c  timestamp.c
my_c/unp/: echo_time_tcp_srv.c  get_time_from_time_server_tcp_cli.c  get_time_tcp_cli.c  inet_pton.c
my_c/unp/chapter01/: echo_time_tcp_srv.c  get_time_tcp_cli.c
my_c/unp/chapter04/: echo_time_fork_tcp_srv.c  use_connect.c
my_c/unp/chapter05/: tcp_cli_01.c  tcp_srv_01.c
my_c/unp/lib/: unp.h  wrap_socket.c
my_rust/: Cargo.toml
my_rust/src/: hello_vitah.rs
(+394 files in other folders)
